dataset1235/2025-2/2947369575/users/3299079478/executions/1003782500_2132966528.log
== RUN (2025-08-27 22:49:09)
-- CODE: 
nome_completo = input("Digite o nome completo: ")

nome_maiusculo = nome_completo.upper()

print("Nome em maiúsculas:", nome_maiusculo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Digite o nome completo: Nome em maiúsculas: DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Digite o nome completo: Nome em maiúsculas: MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Digite o nome completo: Nome em maiúsculas: SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Digite o nome completo: Nome em maiúsculas: BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Digite o nome completo: Nome em maiúsculas: HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Digite o nome completo: Nome em maiúsculas: PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:48:29)
-- CODE: 
nome_completo = input("Digite o nome completo: ")

nome_completo = nome_completo.upper()

print("Nome em maiúsculas:", nome_maiusculo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Nome em maiúsculas:", nome_maiusculo)
                                 ^^^^^^^^^^^^^^
NameError: name 'nome_maiusculo' is not defined
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Nome em maiúsculas:", nome_maiusculo)
                                 ^^^^^^^^^^^^^^
NameError: name 'nome_maiusculo' is not defined
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Nome em maiúsculas:", nome_maiusculo)
                                 ^^^^^^^^^^^^^^
NameError: name 'nome_maiusculo' is not defined
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Nome em maiúsculas:", nome_maiusculo)
                                 ^^^^^^^^^^^^^^
NameError: name 'nome_maiusculo' is not defined
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Nome em maiúsculas:", nome_maiusculo)
                                 ^^^^^^^^^^^^^^
NameError: name 'nome_maiusculo' is not defined
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Nome em maiúsculas:", nome_maiusculo)
                                 ^^^^^^^^^^^^^^
NameError: name 'nome_maiusculo' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:48:27)
-- CODE: 
nome_completo = input("Digite o nome completo: ")

nome_completo = nome_completo.upper()

print("Nome em maiúsculas:", nome_maiusculo)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Nome em maiúsculas:", nome_maiusculo)
                                 ^^^^^^^^^^^^^^
NameError: name 'nome_maiusculo' is not defined
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Nome em maiúsculas:", nome_maiusculo)
                                 ^^^^^^^^^^^^^^
NameError: name 'nome_maiusculo' is not defined
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Nome em maiúsculas:", nome_maiusculo)
                                 ^^^^^^^^^^^^^^
NameError: name 'nome_maiusculo' is not defined
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Nome em maiúsculas:", nome_maiusculo)
                                 ^^^^^^^^^^^^^^
NameError: name 'nome_maiusculo' is not defined
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Nome em maiúsculas:", nome_maiusculo)
                                 ^^^^^^^^^^^^^^
NameError: name 'nome_maiusculo' is not defined
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print("Nome em maiúsculas:", nome_maiusculo)
                                 ^^^^^^^^^^^^^^
NameError: name 'nome_maiusculo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:49:10)
-- CODE: 
nome_completo = input("Digite o nome completo: ")

nome_maiusculo = nome_completo.upper()

print("Nome em maiúsculas:", nome_maiusculo)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
dean_winchester
---- correct output:
DEAN_WINCHESTER
---- user output:
Digite o nome completo: Nome em maiúsculas: DEAN_WINCHESTER
-- TEST CASE 2:
---- input:
maRtIn_GarrIx
---- correct output:
MARTIN_GARRIX
---- user output:
Digite o nome completo: Nome em maiúsculas: MARTIN_GARRIX
-- TEST CASE 3:
---- input:
Selina_Kyle_Silva
---- correct output:
SELINA_KYLE_SILVA
---- user output:
Digite o nome completo: Nome em maiúsculas: SELINA_KYLE_SILVA
-- TEST CASE 4:
---- input:
Billie_Eilish
---- correct output:
BILLIE_EILISH
---- user output:
Digite o nome completo: Nome em maiúsculas: BILLIE_EILISH
-- TEST CASE 5:
---- input:
hOmeM_dE_FeRrO

---- correct output:
HOMEM_DE_FERRO
---- user output:
Digite o nome completo: Nome em maiúsculas: HOMEM_DE_FERRO
-- TEST CASE 6:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
Digite o nome completo: Nome em maiúsculas: PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
